--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,9 @@
 plugins {
     id 'java'
+
 }
 
-<<<<<<< HEAD
-group 'com.chep.organisational-news-portal'
-=======
-group 'com.gloria.news'
->>>>>>> 788f971324a2ca69223d30c25549b27c70c394cf
+group 'com.gloria.OrganisationalNewsPortal'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -14,7 +11,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
-<<<<<<< HEAD
+
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -24,7 +21,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 }
-=======
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "com.sparkjava:spark-core:2.6.0"
@@ -38,4 +35,3 @@ dependencies {
 
 }
 
->>>>>>> 788f971324a2ca69223d30c25549b27c70c394cf
