--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
                 <configuration>
                     <jdkVersion>1.8</jdkVersion>
                     <!-- Change this to YOUR application name! -->
-                    <appName>chep-organisational-news</appName>
+                    <appName>glownews</appName>
                     <processTypes>
                         <web>java -jar target/Organisational-News-Portal-1.0-jar-with-dependencies.jar</web>
                     </processTypes>
@@ -104,5 +104,5 @@
         </plugins>
     </build>
 
-    
+
 </project>
